# feed-filter

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.nas  Makefile  README.md  SETUP.md  channels.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  update-feeds.yml
configs/: movies.yaml  politics.yaml  sports.yaml  tech-secondary.yaml  tech.yaml
docs/: badempanada-main.xml  badempanadalive-main.xml  bookoverflowpod-main.xml  breakingpoints-streams.xml  brodesmedia-main.xml  chinadriven-main.xml  combined-movies.xml  combined-politics.xml  combined-politics2.xml  combined-sports.xml  combined-tech-secondary.xml  combined-tech.xml  combined.xml  datadrivennyc-main.xml  declineandfall-streams.xml  deepdiveperspective-main.xml  foulterritory-main.xml  gdfofficial-main.xml  geohot-blog.xml  geopoliticaleconomyreport-main.xml  hermittech-blog.xml  intuitivetennis-main.xml  intuitivetennis-streams.xml  jeffrauseo-main.xml  judgingfreedom-streams.xml  ludic-blog.xml  lunaoi-main.xml  moralresistance-main.xml  moralresistance-streams.xml  movieknights-main.xml  movieknights-streams.xml  nflonnbc-main.xml  nflonnbc-streams.xml  nodunksinc-main.xml  pablotorrefindsout-main.xml  provokedshow-streams.xml  radicalthinker-main.xml  rightstorickysanchez-main.xml  rightstorickysanchez-streams.xml  righttimebomani-main.xml  (+19 more)
launchd/: com.feedfilter.updatefeeds.plist
netlify-redirect/: _headers  _redirects  hosted-politics.xml  hosted-sports.xml  index.html
scripts/: nas-crontab  nas-entrypoint.sh  update_and_publish.sh  update_and_publish_nas.sh
src/feed_filter/: __init__.py  blog_source.py  config.py  feed_builder.py  logger.py  main.py  pipeline.py  websub.py  youtube_source.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py
